=== NoNa ===
== Version 1.5 ==
Changelog: April 23, 2012
= Code =
* Addressed deprecated function call to `add_custom_background`
* Addressed deprecated function call to `get_theme_data`

= Internet Browsers Reviewed =
* Apple Safari v5.1.5
* Firefox v11.0
* Google Chrome v18.0
* Internet Explorer v9.0
* Opera v11.62

/** ------------------------------------------------------------------------- */

== Version 1.4 ==
Changelog: November 6, 2011
= Code =
* Added textdomain as needed to string functions
* Added previous and next post navigation in the `single.php` template
* Added `wp_link_pages` after every instance of `the_content`
* Added `description` parameter to `register_sidebar` definitions
* Removed `show_avatar` function - not used
* Removed `bns_menu` function - not used
* Removed `nona_get_page_number` function - no longer used
* Removed display of 'Featured Image' in `single.php` for aesthetic reasons
* Removed default 'Home' link in menus when not on home page; leave as end-user choice via custom menu
* Replaced `the_author_posts_link` (deprecated) with `get_author_posts_url`
* Updated 'BNS Dynamic Copyright' and renamed to 'NoNa Dynamic Copyright'
* Updated 'BNS Theme Version' and renamed to 'NoNa Theme Version'

= CSS =
* `font-size` changed to base of 115% from 18px
* Changed font-sizes changed to percentage base; some additional adjustments made
* Change main background image to `GrungeOverlayTileSmall.png` for better seamless tiling
* Change `GrungeOverlayTileSmall.png` background property to 'body' tag and remove `#full-screen`
* Added more consistent formatting
* Added `max-width` parameter to address gallery with up to 10 columns
* Added CSS to support `editor-style`
* Removed Internet Explorer `lte IE 7` support
* Removed `head2toe` as not needed
* Removed .avatar class; not used (and conflicts with v3.3-beta1 Admin Bar)
* Removed all empty elements (except those required by WordPress guidelines)