@@ -2,6 +2,7 @@
 == Version 1.5 ==
 Changelog: April 23, 2012
 = Code =
+* Added $args to `nona_login` function - adopted from BNS-Login plugin
 * Addressed deprecated function call to `add_custom_background`
 * Addressed deprecated function call to `get_theme_data`
 
